--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   object-position: center;
 }
 
-#topButton {
+#topButton1 {
   width: 120px;
   height: 100px;
   background: rgb(16,12,36);
@@ -60,7 +60,72 @@ body {
   border-color: white;
 }
 
-#topButton:hover {
+#topButton2 {
+  width: 120px;
+  height: 100px;
+  background: rgb(16,12,36);
+  color: white;
+  border-color: white;
+}
+
+#topButton3 {
+  width: 120px;
+  height: 100px;
+  background: rgb(16,12,36);
+  color: white;
+  border-color: white;
+}
+
+#topButton4 {
+  width: 120px;
+  height: 100px;
+  background: rgb(16,12,36);
+  color: white;
+  border-color: white;
+}
+
+#topButton5 {
+  width: 120px;
+  height: 100px;
+  background: rgb(16,12,36);
+  color: white;
+  border-color: white;
+}
+
+
+#topButton1:hover {
+  width: 120px;
+  height: 100px;
+  background: white;
+  color: rgb(16,12,36);
+  border-color: rgb(16,12,36);
+}
+
+#topButton2:hover {
+  width: 120px;
+  height: 100px;
+  background: white;
+  color: rgb(16,12,36);
+  border-color: rgb(16,12,36);
+}
+
+#topButton3:hover {
+  width: 120px;
+  height: 100px;
+  background: white;
+  color: rgb(16,12,36);
+  border-color: rgb(16,12,36);
+}
+
+#topButton4:hover {
+  width: 120px;
+  height: 100px;
+  background: white;
+  color: rgb(16,12,36);
+  border-color: rgb(16,12,36);
+}
+
+#topButton5:hover {
   width: 120px;
   height: 100px;
   background: white;
